메인화면 버튼배치 완료

--- a/swingy/Makefile
+++ b/swingy/Makefile
@@ -3,5 +3,13 @@ all :
 	mvn install
 	java -jar target/swingy-1.0-SNAPSHOT.jar
 
+gui :
+	mvn install
+	java -jar target/swingy-1.0-SNAPSHOT.jar gui
+
+console :
+	mvn install
+	java -jar target/swingy-1.0-SNAPSHOT.jar console
+
 clean :
 	mvn clean
